--- a/static-manifest.yml
+++ b/static-manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
-- name: store-template-simple
-  buildpack: https://github.com/drnic/staticfile-buildpack.git
+- name: my-storefront
+  buildpack: https://github.com/cloudfoundry/staticfile-buildpack.git
   memory: 64M
   host: store-template-simple
   instances: 1
